# gegl-HDR-ColorMapper

./: README.md  clip_saturation.txt  hsy_saturation.txt
gegl-ColorMapper/: build_linux.sh  color-mapper.c  meson.build
gegl-exposure-map/: README.md  build_linux.sh  exposure_map.c  meson.build
gegl-image-density/: build_linux.sh  config.h  image-density.c  meson.build
gegl-image-gradient-rel/: build_linux.sh  image-gradient-rel.c  meson.build
